variable added and build lr model
1.Adding variable temp_df for extracting new dataframe
2.Building lr model with Lasso and PCA feature selection method

--- a/Data/lyft_preprocessing.ipynb
+++ b/Data/lyft_preprocessing.ipynb
@@ -2,22 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/_t/sfl_18tn7170tw9l_k83zly40000gn/T/ipykernel_14790/1467108497.py:3: DtypeWarning: Columns (6,7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df=pd.read_csv(\"complete_dataset_V2.csv\")\n"
+      "C:\\Users\\TYS\\AppData\\Local\\Temp\\ipykernel_9480\\1951720582.py:3: DtypeWarning: Columns (6,7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df=pd.read_csv(\"C:/Users/TYS/Documents/study/Master/INSY662/group project/Real Code/INSY662-Group-Project/Data/complete_dataset_V2.csv\")\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "df=pd.read_csv(\"complete_dataset_V2.csv\")\n",
+    "df=pd.read_csv(\"C:/Users/TYS/Documents/study/Master/INSY662/group project/Real Code/INSY662-Group-Project/Data/complete_dataset_V2.csv\")\n",
     "df['rideable_type'] = df['rideable_type'].replace('docked_bike', 'classic_bike')\n",
     "#drop columns\n",
     "new_df=df.drop(columns=[\"ride_id\",\"started_at\",\"ended_at\",\"start_station_name\",\"end_station_name\",\"start_station_id\", \"end_station_id\",\"snow\",\"wpgt\",\"tsun\"])\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,6 +65,16 @@
     "\n",
     "# Now X_std has the scaled values for all columns except \"average_speed\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the sliced data to a new CSV file\n",
+    "new_df.to_csv('C:/Users/TYS/Documents/study/Master/INSY662/group project/Real Code/INSY662-Group-Project/Data/complete_dataset_5000.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
@@ -83,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
