add export data method

--- a/Data/lyft_preprocessing.ipynb
+++ b/Data/lyft_preprocessing.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/_t/sfl_18tn7170tw9l_k83zly40000gn/T/ipykernel_14790/1467108497.py:3: DtypeWarning: Columns (6,7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/_t/yhfwr7zs235_z88czy6gmp2m0000gn/T/ipykernel_5992/1467108497.py:3: DtypeWarning: Columns (6,7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df=pd.read_csv(\"complete_dataset_V2.csv\")\n"
      ]
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,6 +65,15 @@
     "\n",
     "# Now X_std has the scaled values for all columns except \"average_speed\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_std.to_csv(\"pre-processed.csv\")"
+   ]
   }
  ],
  "metadata": {
@@ -83,7 +92,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
