add model exploration

--- a/Data/lyft_preprocessing.ipynb
+++ b/Data/lyft_preprocessing.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/_t/yhfwr7zs235_z88czy6gmp2m0000gn/T/ipykernel_5992/1467108497.py:3: DtypeWarning: Columns (6,7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/_t/yhfwr7zs235_z88czy6gmp2m0000gn/T/ipykernel_5992/3551136494.py:3: DtypeWarning: Columns (6,7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df=pd.read_csv(\"complete_dataset_V2.csv\")\n"
      ]
     }
@@ -20,11 +20,16 @@
     "df=pd.read_csv(\"complete_dataset_V2.csv\")\n",
     "df['rideable_type'] = df['rideable_type'].replace('docked_bike', 'classic_bike')\n",
     "#drop columns\n",
-    "new_df=df.drop(columns=[\"ride_id\",\"started_at\",\"ended_at\",\"start_station_name\",\"end_station_name\",\"start_station_id\", \"end_station_id\",\"snow\",\"wpgt\",\"tsun\"])\n",
+    "new_df=df.drop(columns=[\"ride_id\",\n",
+    "                        \"started_at\",\"ended_at\",\n",
+    "                        \"start_station_name\",\"end_station_name\",\n",
+    "                        \"start_station_id\", \"end_station_id\",\n",
+    "                        \"snow\",\"wpgt\",\"tsun\"])\n",
     "new_df=new_df.dropna()\n",
     "#check duplicates\n",
     "new_df[new_df.duplicated()].shape\n",
-    "\n",
+    "#exclude trips that are shoter than 1 min\n",
+    "new_df=new_df[new_df[\"trip_time\"]>=1]\n",
     "\n",
     "#create dummy\n",
     "categorical_columns = [\"member_casual\", \"rideable_type\", \n",
@@ -36,13 +41,15 @@
     "# Concatenating the dummy variables to the original DataFrame\n",
     "new_df = pd.concat([new_df, dummies], axis=1)\n",
     "\n",
-    "#construct predictors\n",
-    "X = new_df.drop(columns=[\"rideable_type_electric_bike\"])\n"
+    "#Exclude average_speed columns that has infinity values from the dataset\n",
+    "new_df = new_df[new_df['average_speed'] != np.inf]\n",
+    "\n",
+    "# new_df.to_csv(\"pre-processed.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,8 +59,8 @@
     "\n",
     "\n",
     "# Exclude \"average_speed\" from scaling\n",
-    "columns_to_scale = X.columns.difference(['average_speed'])\n",
-    "X_to_scale = X[columns_to_scale]\n",
+    "columns_to_scale = new_df.columns.difference(['average_speed',\"start_station_cluster\", \"end_station_cluster\"])\n",
+    "X_to_scale = new_df[columns_to_scale]\n",
     "\n",
     "# Apply MinMaxScaler to the other columns\n",
     "scaler = MinMaxScaler()\n",
@@ -61,14 +68,16 @@
     "X_std = pd.DataFrame(X_std, columns=columns_to_scale)\n",
     "\n",
     "# Add the \"average_speed\" column back to the scaled DataFrame\n",
-    "X_std['average_speed'] = X['average_speed'].values\n",
+    "X_std['average_speed'] = new_df['average_speed'].values\n",
+    "X_std['start_station_cluster'] = new_df['start_station_cluster'].values\n",
+    "X_std['end_station_cluster'] = new_df['end_station_cluster'].values\n",
     "\n",
     "# Now X_std has the scaled values for all columns except \"average_speed\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
