--- a/Model/ARIMA_demand_forcasting.ipynb
+++ b/Model/ARIMA_demand_forcasting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -35,35 +35,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2022-01-01</td>\n",
+       "      <td>2022/1/1</td>\n",
        "      <td>0</td>\n",
        "      <td>classic_bike</td>\n",
        "      <td>94</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2022-01-01</td>\n",
+       "      <td>2022/1/1</td>\n",
        "      <td>0</td>\n",
        "      <td>electric_bike</td>\n",
        "      <td>196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2022-01-01</td>\n",
+       "      <td>2022/1/1</td>\n",
        "      <td>1</td>\n",
        "      <td>classic_bike</td>\n",
        "      <td>11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2022-01-01</td>\n",
+       "      <td>2022/1/1</td>\n",
        "      <td>1</td>\n",
        "      <td>electric_bike</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2022-01-01</td>\n",
+       "      <td>2022/1/1</td>\n",
        "      <td>2</td>\n",
        "      <td>classic_bike</td>\n",
        "      <td>37</td>\n",
@@ -77,35 +77,35 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12299</th>\n",
-       "      <td>2022-12-31</td>\n",
+       "      <td>2022/12/31</td>\n",
        "      <td>17</td>\n",
        "      <td>electric_bike</td>\n",
        "      <td>189</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12300</th>\n",
-       "      <td>2022-12-31</td>\n",
+       "      <td>2022/12/31</td>\n",
        "      <td>18</td>\n",
        "      <td>classic_bike</td>\n",
        "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12301</th>\n",
-       "      <td>2022-12-31</td>\n",
+       "      <td>2022/12/31</td>\n",
        "      <td>18</td>\n",
        "      <td>electric_bike</td>\n",
        "      <td>46</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12302</th>\n",
-       "      <td>2022-12-31</td>\n",
+       "      <td>2022/12/31</td>\n",
        "      <td>19</td>\n",
        "      <td>classic_bike</td>\n",
        "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12303</th>\n",
-       "      <td>2022-12-31</td>\n",
+       "      <td>2022/12/31</td>\n",
        "      <td>19</td>\n",
        "      <td>electric_bike</td>\n",
        "      <td>4</td>\n",
@@ -117,22 +117,22 @@
       ],
       "text/plain": [
        "             date  start_station_cluster  rideable_type  trip_count\n",
-       "0      2022-01-01                      0   classic_bike          94\n",
-       "1      2022-01-01                      0  electric_bike         196\n",
-       "2      2022-01-01                      1   classic_bike          11\n",
-       "3      2022-01-01                      1  electric_bike           8\n",
-       "4      2022-01-01                      2   classic_bike          37\n",
+       "0        2022/1/1                      0   classic_bike          94\n",
+       "1        2022/1/1                      0  electric_bike         196\n",
+       "2        2022/1/1                      1   classic_bike          11\n",
+       "3        2022/1/1                      1  electric_bike           8\n",
+       "4        2022/1/1                      2   classic_bike          37\n",
        "...           ...                    ...            ...         ...\n",
-       "12299  2022-12-31                     17  electric_bike         189\n",
-       "12300  2022-12-31                     18   classic_bike          13\n",
-       "12301  2022-12-31                     18  electric_bike          46\n",
-       "12302  2022-12-31                     19   classic_bike           9\n",
-       "12303  2022-12-31                     19  electric_bike           4\n",
+       "12299  2022/12/31                     17  electric_bike         189\n",
+       "12300  2022/12/31                     18   classic_bike          13\n",
+       "12301  2022/12/31                     18  electric_bike          46\n",
+       "12302  2022/12/31                     19   classic_bike           9\n",
+       "12303  2022/12/31                     19  electric_bike           4\n",
        "\n",
        "[12304 rows x 4 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,27 +152,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(           date  start_station_cluster rideable_type  trip_count\n",
-       " 0    2022-01-01                      0  classic_bike          94\n",
-       " 31   2022-01-02                      0  classic_bike         111\n",
-       " 63   2022-01-03                      0  classic_bike         125\n",
-       " 96   2022-01-04                      0  classic_bike         139\n",
-       " 128  2022-01-05                      0  classic_bike         174,\n",
-       "            date  start_station_cluster  rideable_type  trip_count\n",
-       " 1    2022-01-01                      0  electric_bike         196\n",
-       " 32   2022-01-02                      0  electric_bike         194\n",
-       " 64   2022-01-03                      0  electric_bike         227\n",
-       " 97   2022-01-04                      0  electric_bike         221\n",
-       " 129  2022-01-05                      0  electric_bike         282)"
+       "(         date  start_station_cluster rideable_type  trip_count\n",
+       " 0    2022/1/1                      0  classic_bike          94\n",
+       " 31   2022/1/2                      0  classic_bike         111\n",
+       " 63   2022/1/3                      0  classic_bike         125\n",
+       " 96   2022/1/4                      0  classic_bike         139\n",
+       " 128  2022/1/5                      0  classic_bike         174,\n",
+       "          date  start_station_cluster  rideable_type  trip_count\n",
+       " 1    2022/1/1                      0  electric_bike         196\n",
+       " 32   2022/1/2                      0  electric_bike         194\n",
+       " 64   2022/1/3                      0  electric_bike         227\n",
+       " 97   2022/1/4                      0  electric_bike         221\n",
+       " 129  2022/1/5                      0  electric_bike         282)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,20 +191,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\TYS\\AppData\\Local\\Temp\\ipykernel_16316\\2913468349.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\TYS\\AppData\\Local\\Temp\\ipykernel_71000\\2913468349.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  classic_bike_data['date'] = pd.to_datetime(classic_bike_data['date'])\n",
-      "C:\\Users\\TYS\\AppData\\Local\\Temp\\ipykernel_16316\\2913468349.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\TYS\\AppData\\Local\\Temp\\ipykernel_71000\\2913468349.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -231,7 +231,7 @@
        " 2022-01-05                      0  electric_bike         282)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -900,10 +900,10 @@
        "  <th>Model:</th>            <td>ARIMA(2, 1, 3)</td>  <th>  Log Likelihood     </th> <td>-2154.725</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>            <td>Sun, 19 Nov 2023</td> <th>  AIC                </th> <td>4321.451</td> \n",
+       "  <th>Date:</th>            <td>Mon, 20 Nov 2023</td> <th>  AIC                </th> <td>4321.451</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                <td>17:20:46</td>     <th>  BIC                </th> <td>4344.834</td> \n",
+       "  <th>Time:</th>                <td>09:31:10</td>     <th>  BIC                </th> <td>4344.834</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Sample:</th>             <td>01-01-2022</td>    <th>  HQIC               </th> <td>4330.745</td> \n",
@@ -959,8 +959,8 @@
        "\\toprule\n",
        "\\textbf{Dep. Variable:}          &   trip\\_count    & \\textbf{  No. Observations:  } &    365      \\\\\n",
        "\\textbf{Model:}                  &  ARIMA(2, 1, 3)  & \\textbf{  Log Likelihood     } & -2154.725   \\\\\n",
-       "\\textbf{Date:}                   & Sun, 19 Nov 2023 & \\textbf{  AIC                } &  4321.451   \\\\\n",
-       "\\textbf{Time:}                   &     17:20:46     & \\textbf{  BIC                } &  4344.834   \\\\\n",
+       "\\textbf{Date:}                   & Mon, 20 Nov 2023 & \\textbf{  AIC                } &  4321.451   \\\\\n",
+       "\\textbf{Time:}                   &     09:31:10     & \\textbf{  BIC                } &  4344.834   \\\\\n",
        "\\textbf{Sample:}                 &    01-01-2022    & \\textbf{  HQIC               } &  4330.745   \\\\\n",
        "\\textbf{}                        &   - 12-31-2022   & \\textbf{                     } &             \\\\\n",
        "\\textbf{Covariance Type:}        &       opg        & \\textbf{                     } &             \\\\\n",
@@ -997,8 +997,8 @@
        "==============================================================================\n",
        "Dep. Variable:             trip_count   No. Observations:                  365\n",
        "Model:                 ARIMA(2, 1, 3)   Log Likelihood               -2154.725\n",
-       "Date:                Sun, 19 Nov 2023   AIC                           4321.451\n",
-       "Time:                        17:20:46   BIC                           4344.834\n",
+       "Date:                Mon, 20 Nov 2023   AIC                           4321.451\n",
+       "Time:                        09:31:10   BIC                           4344.834\n",
        "Sample:                    01-01-2022   HQIC                          4330.745\n",
        "                         - 12-31-2022                                         \n",
        "Covariance Type:                  opg                                         \n",
@@ -1023,7 +1023,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1054,20 +1054,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(467.9226235117105,\n",
+       "(428.87000315138414,\n",
        " 456,\n",
        " lower trip_count    274.193802\n",
        " upper trip_count    661.651445\n",
        " Name: 2022-02-10 00:00:00, dtype: float64)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,7 +1080,7 @@
     "# However, this step is not needed if you just want the forecast for the period '2022-01-01' to '2022-01-07'\n",
     "\n",
     "# Get the forecasted value for the last date '2022-01-07'\n",
-    "predicted_value = predicted_demand.predicted_mean['2022-02-10']\n",
+    "predicted_value = predicted_demand.predicted_mean['2022-02-03']\n",
     "\n",
     "# Get the confidence interval for the forecasted value for the last date '2022-01-07'\n",
     "predicted_conf_int = predicted_demand.conf_int().loc['2022-02-10']\n",
