--- a/Model/logistic_regression.ipynb
+++ b/Model/logistic_regression.ipynb
@@ -13,7 +13,7 @@
     "import seaborn as sns                       #visualisation\n",
     "import matplotlib.pyplot as plt             #visualisation\n",
     "\n",
-    "file = \"C:/Users/TYS/Documents/study/Master/INSY662/group project/Real Code/INSY662-Group-Project/Data/complete_dataset_5000.csv\"\n",
+    "file = \"C:/Users/TYS/Documents/study/Master/INSY662/group project/Real Code/INSY662-Group-Project/Data/complete_dataset_V2.csv\"\n",
     "df = pd.read_csv(file)"
    ]
   },
@@ -38,7 +38,9 @@
     }
    ],
    "source": [
-    "df.head"
+    "df.head\n",
+    "#drop location information, lat, lng\n",
+    "#drop the features we don't know before we ride bike"
    ]
   },
   {
