--- a/Model/model_exploration.ipynb
+++ b/Model/model_exploration.ipynb
@@ -228,7 +228,8 @@
     "rfc.fit(X_train,y_train)\n",
     "rfc_pred = rfc.predict(X_test)\n",
     "\n",
-    "print(classification_report(y_test,rfc_pred))"
+    "print(classification_report(y_test,rfc_pred))\n",
+    "# print(rfc.feature_importances_)"
    ]
   }
  ],
@@ -248,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4
  },
